changedetection/change-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: change-svc
spec:
  # type: ClusterIP
  selector:
    app: change-pod
  ports:
    - name: http-change-out
      protocol: TCP
      port: 80
      targetPort: http-change
